[package]
name = "scpsl-api"
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["trickybestia <trickybestia@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
base64 = "0.13.0"