[package]
name = "scpsl-api"
description = "A SCP: Secret Laboratory API wrapper"
version = "0.1.0-alpha.7"
edition = "2018"
authors = ["trickybestia <trickybestia@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/trickybestia/scpsl-api"
documentation = "https://docs.rs/scpsl-api"
keywords = ["scp", "scpsl", "api", "async"]
categories = ["api-bindings", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
base64 = "0.13.0"

[features]
raw = []